--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,10 @@ workflows:
       - build-and-deploy:
           requires:
              - node/test
+          filters:
+            branches:
+              only:
+                - main
 
 jobs:
   build-and-deploy:
